sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: not found: value i
    if(isSmaller(i+1,i))
                 ^AlgGnomeSort:7: error: not found: value i
    if(isSmaller(i+1,i))
                     ^AlgGnomeSort:9: error: not found: value Swap
      Swap(i,i+1);
      ^AlgGnomeSort:9: error: not found: value i
      Swap(i,i+1);
           ^AlgGnomeSort:9: error: not found: value i
      Swap(i,i+1);
             ^AlgGnomeSort:10: error: not found: value i
      i-=1;
      ^AlgGnomeSort:14: error: not found: value i
      i+=1;
      ^