sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var length : Int = getValueCount();
  var I : Int = 0;
  while(I<length)
  {
    if(isSmaller(i+1,i))
    {
      Swap(i,i+1);
      i-=1;
    }
    else
    {
      i+=1;
    }
  }
}